# xcbc

./: .appveyor.yml  .cirrus.yml  .gitignore  CONTRIBUTING.md  INSTALL.md  Makefile.am  README.md  REVIEWERS  SECURITY.md  configure.ac  libxcbcconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
build_msvc/: .gitignore  README.md  libsecp256k1_config.h  msvc-autogen.py  vcpkg.json  xcbc.sln  xcbc_config.h
contrib/: README.md  gitian-build.py  install_db4.sh  valgrind.supp  xcbc-cli.bash-completion  xcbc-tx.bash-completion  xcbcd.bash-completion
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-android.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  gitian-building.md  guix.md  i2p.md  init.md  multiprocess.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  xcbc-conf.md  zmq.md
doc/man/: Makefile.am  xcbc-cli.1  xcbc-qt.1  xcbc-tx.1  xcbc-util.1  xcbc-wallet.1  xcbcd.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  addrdb.h  (+111 more)
(+773 files in other folders)
