dist_man1_MANS=

if BUILD_XCBCD
  dist_man1_MANS+=xcbcd.1
endif

if ENABLE_QT
  dist_man1_MANS+=xcbc-qt.1
endif

if BUILD_XCBC_CLI
  dist_man1_MANS+=xcbc-cli.1
endif

if BUILD_XCBC_TX
  dist_man1_MANS+=xcbc-tx.1
endif

if BUILD_XCBC_UTIL
  dist_man1_MANS+=xcbc-util.1
endif

if ENABLE_WALLET
if BUILD_XCBC_WALLET
  dist_man1_MANS+=xcbc-wallet.1
endif
endif
